fix: align sticker popover rightward

--- a/src/core/scss/_zadark-sticker.scss
+++ b/src/core/scss/_zadark-sticker.scss
@@ -69,7 +69,7 @@
 .zadark-sticker-toolbar-popover {
   position: absolute;
   z-index: 10000;
-  right: 0;
+  left: 0;
   bottom: calc(100% + 8px);
   display: grid;
   grid-template-columns: minmax(150px, 1fr) auto;
